2011-03-11  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Tony Chang.

        Selection uses first mousemove's localRect instead of that of mousedown
        https://bugs.webkit.org/show_bug.cgi?id=56213

        Fixed the bug by adding an extra call to updateSelectionForMouseDrag in handleMouseDraggedEvent
        using the mouse coordinates of the mousedown event that started the drag.

        Test: editing/selection/drag-select-rapidly.html

        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleMouseDraggedEvent):
2011-03-11  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Tony Chang.

        Selection uses first mousemove's localRect instead of that of mousedown
        https://bugs.webkit.org/show_bug.cgi?id=56213

        Added a test to ensure the selection start is computed using the mouse coordinates passed down
        to the corresponding mousedown event instead of that of the first mousemove event.

        The test is co-authored by Evan Martin.

        * editing/selection/anchor-focus2-expected.txt: Editing delegate changes.
        * editing/selection/anchor-focus3-expected.txt: Ditto.
        * editing/selection/drag-select-rapidly-expected.txt: Added.
        * editing/selection/drag-select-rapidly.html: Added.
        * platform/mac/editing/selection/drag-select-1-expected.txt: Selects the correct range of text.
        * platform/mac/editing/selection/fake-drag-expected.txt: Ditto.
        * platform/mac/editing/selection/inline-closest-leaf-child-expected.txt: Ditto.


Canonical link: https://commits.webkit.org/70933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81053 268f45cc-cd09-0410-ab3c-d52691b4dbfc